# uart

./: .gitignore  DEBUG_CHECKPOINT_1.md  DEVELOPMENT_GUIDELINES.md  PHASE_5.3_SUMMARY.md  PHASE_5.4_CDC_DECISION.md  UART_Implementation_Plan.md  UART_PERIPHERAL_FINAL_SUMMARY.md
docs/: INTERFACE_SPECIFICATIONS.md
docs/state_machines/: Makefile  README.md  axi_read_fsm.dot  axi_write_fsm.dot  uart_regs_rx_prefetch_fsm.dot  uart_rx_fsm.dot  uart_tx_fsm.dot
rtl/: async_fifo.sv  axi_lite_slave_if.sv  baud_gen.sv  bit_sync.sv  gray_sync.sv  multi_bit_sync.sv  pulse_sync.sv  sync_fifo.sv  uart_axi_top.sv  uart_baud_gen.sv  uart_regs.sv  uart_rx.sv  uart_rx_path.sv  uart_top.sv  uart_tx.sv  uart_tx_path.sv
simulation/: CMakeLists.txt  input.vc  test_utils.cpp
simulation/include/: test_utils.h
simulation/tests/: async_fifo_tests.cpp  clock_driver.h  test_main.cpp  uart_full_duplex_tests.cpp  uart_loopback_tests.cpp
simulation/tests/module/: axi_lite_slave_if_test.cpp  baud_gen_test.cpp  bit_sync_test.cpp  sync_fifo_test.cpp  uart_axi_top_test.cpp  uart_regs_test.cpp  uart_rx_path_test.cpp  uart_rx_test.cpp  uart_top_test.cpp  uart_tx_path_test.cpp  uart_tx_test.cpp
